--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,11 @@
     "name": "URL Notes Extension",
     "version": "1.0",
     "description": "Save URLs and notes for easy access.",
-    "permissions": ["activeTab", "storage"],
+    "permissions": [
+        "activeTab",
+        "storage",
+        "https://www.youtube.com/*"
+    ],
     "action": {
         "default_popup": "popup.html"
     },
